# 3D_learned_Object_reassembly

./: .gitignore  README.md  experiments.py  generate_iss_kepoints_and_shot_descriptors.py  generate_training_data cluster.py  generate_training_data.py  generate_training_data_cluster.py  generate_training_data_local.py  generate_training_data_old.py  github  github.pub  hyperglue.py  keypoint_and_descriptors_loading.py  process_folder_cluster.py  requirements.txt
SuperGlue-Training-master/: .gitignore  README.md  env.sh  launch_cluster.sh  requirements.txt  setup.py
USIP/: clean_trained.py  generate_keypoints.sh  setup_usip_0.sh  setup_usip_1.sh  train_usip parallel.sh  train_usip.sh
evaluation/: evaluate_keypoints.py  keypoint_repeatability.csv  keypoint_surface_repeatability.csv  plot_keypoint_method_repeatability.py  wtf.ipynb
full_pipeline/: reassemble_object.py
hyperglue/: dataset.py  experiments.py  hyperglue.py  hyperglue_cluster.py  hyperpillar_cluster.py  param_search.sh  predict.py  sweep.py  sweep.yaml  sweep_config.py  train.py  train_network.sh
keypoints_and_descriptors/: descriptors.py  keypoints.py  utils.py
last_years_project/: pointcloud_plotter.ipynb
neural_network/: README.md  dataset.py  model.py  predict.py  train.py
object_fracturing/: 3D_harris.py  README.md  clean.sh  clean_data.py  clean_total_dataset.py  clean_total_dataset_cluster.py  clear_data.py  delete_unecessary_files.py  download_blender.py  find_fragment_matchings.py  (+24 more)
pcl/: CMakeLists.txt  features.cpp
pcl/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  fpfh
(+9812 files in other folders)
