cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(pcl)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
find_package(PCL 1.3 REQUIRED COMPONENTS common io features kdtree visualization)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(fpfh features.cpp)
target_link_libraries(fpfh ${PCL_LIBRARIES})
